# gmex.api

./: README.md
gmex-api-dotnet/Demo1/: Form1.Designer.cs  Form1.cs  FormRestApiMkt.Designer.cs  FormRestApiMkt.cs  FormRestApiTrd.Designer.cs  FormRestApiTrd.cs
gmex-api-dotnet/Demo1/Properties/: Resources.Designer.cs  Settings.Designer.cs
gmex-api-dotnet/Gmex.API/: Gmex.API.csproj  Helper.cs
gmex-api-dotnet/Gmex.API/Models/: Market.cs  Position.cs  TradeRequestLoginArgs.cs  UserApiKeyData.cs  Wlt.cs
gmex-api-dotnet/Gmex.API/REST/: RESTClient4Market.cs  RESTClient4Trade.cs  RestMessage.cs
gmex-api-dotnet/Gmex.API/WS/: Client4Market.cs  Client4Trade.cs
gmex-api-html/: demo.html  gaealib_api.js
gmex-api-python/: README.md  consts.py  helper.py
gmex-api-rust/: Cargo.toml  README.txt  rustfmt.toml
gmex-api-rust/examples/http_client/: Cargo.toml
gmex-api-rust/examples/http_client/src/: http_client.rs
gmex-api-rust/examples/websocket_client/: Cargo.toml
gmex-api-rust/examples/websocket_client/src/: websocket_client.rs
gmex-api-rust/src/: helper.rs  lib.rs  mkt.rs  msg.rs  types.rs
gmex-unofficial-api-docs/: Limits.txt  MsgCode.txt  REST_API_for_GMEX_v1.md  VP.md  WebSocket_API_for_GMEX_v1.md
gmex_api_rust/: README.txt
gmex_api_rust/examples/http_client/: Cargo.toml
gmex_api_rust/examples/http_client/src/: http_client.rs
gmex_api_rust/examples/websocket_client/src/: websocket_client.rs
gmex_api_rust/src/: types.rs
