[package]
name = "gmex-api"
version = "0.1.0"
authors = ["pete <hexiaoyuan@gmail.com>"]
edition = "2018"

[lib]
name = "gmex_api"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "examples/websocket_client",
  "examples/http_client",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
bitflags = "1"
rust_decimal = "1.0"
rust_decimal_macros = "1.0"