[package]
name = "http_client"
version = "0.1.0"
authors = ["pete <hexiaoyuan@gmail.com>"]
edition = "2018"
workspace = "../.."

[[bin]]
name = "http_client"
path = "src/http_client.rs"

[dependencies]
gmex-api = { path = "../..", version = "0.1" }
failure = "0.1"
# structopt = { version = "0.3", features = [ "paw" ] }
# paw = "1.0"

reqwest = "0.9"
dotenv = "0.14"
log = "0.4"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8"

bitflags = "1"
rust_decimal = "1.0"
rust_decimal_macros = "1.0"

md5 = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
