[package]
name = "http_client"
version = "0.1.0"
authors = ["pete <hexiaoyuan@gmail.com>"]
edition = "2018"
workspace = "../.."

[[bin]]
name = "http_client"
path = "src/http_client.rs"

[dependencies]
gmex-api = { path = "../..", version = "0.1" }

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

dotenv = "0.15"
log = "0.4"
env_logger = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8"

bitflags = "1"
rust_decimal = "1.2"
rust_decimal_macros = "1.2"

md5 = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
