[package]
name = "websocket_client"
version = "0.1.0"
authors = ["pete <hexiaoyuan@gmail.com>"]
edition = "2018"
workspace = "../.."

[[bin]]
name = "websocket_client"
path = "src/websocket_client.rs"

[dependencies]
gmex-api = { path = "../..", version = "0.1" }

# ws = { version = "*", git = "https://github.com/housleyjk/ws-rs"}   # https://ws-rs.org/guide
ws = { version = "*", features = ["ssl", "permessage-deflate"] }

dotenv = "0.14"
log = "0.4"
env_logger = "0.7"
failure = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8"

bitflags = "1"
decimal = "2.0.4"

md5 = "0.6.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
